# Counter_web_app

./: README.md  docker-compose.yml
.github/workflows/: rust.yml
api/: Cargo.toml  Dockerfile
api/src/: main.rs  modules.rs
api/src/modules/: route.rs  swagger.rs
api/src/modules/route/: db.rs
front/: Dockerfile  package.json
front/src/: App.js  App.tsx  Counter.css  Counter.tsx
proxy/: default.conf
